添加内部app--填写交易计划接口
